TEST/EXCEPT-tests/exception_test_010.errout.GOLD
/workspaces/Pnut-ts-dev/TEST/EXCEPT-tests/exception_test_010.spin2:30:error:No PUB method or DAT block found
