TEST/EXCEPT-tests/exception_test_010.spin2
'' =================================================================================================
''   Purpose.... Regression TEST: Exception no DAT or PUB/PRI found!
''   Authors.... Stephen M Moraco
''               -- Copyright (c) 2024 Iron Sheep Productions, LLC
''               -- see below for terms of use
''   E-mail..... stephen@ironsheep.biz
''   Started.... Jan 2024
'' =================================================================================================
' {Spin2_v43}

CON { timing }


  CLK_FREQ = 200_000_000                                        ' system freq as a constant


  _clkfreq = CLK_FREQ                                           ' set system clock

CON { license }
{{

 -------------------------------------------------------------------------------------------------
  MIT License

  Copyright (c) 2024 Iron Sheep Productions, LLC

  Permission is hereby granted... dummy license block for test purposes
 =================================================================================================
}}
